--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="bg" id="bg" onkeyup="start(event);">
     
     <div class="time" id="time">Your Remaining Time: 50</div>
-    <img src="Run1.png" class="knight" id="knight" />
-    <img src="Walk1.png" class="zombie" id="zombie" />
+    <img src="./Run1.png" class="knight" id="knight" />
+    <img src="./Walk1.png" class="zombie" id="zombie" />
 
     <div id="gameOverModal" class="modal">
         <div class="modal-content">
